# podhome-mcp

./: .env.example  .gitignore  AGENTS.md  GETTING_STARTED_NIX.md  LICENSE  NIX_FLAKE_SUMMARY.md  README.md  flake.nix  package.json  podhome-mcp-spec.md  pyproject.toml  vitest.config.ts
scripts/: update-npm-deps.sh
src/: index.ts  types.ts  utils.ts
src/clients/: podhome.ts  r2.ts
src/podhome_mcp/: __init__.py  client.py  config.py  server.py  tools.py
src/tools/: create-episode.ts  delete-episode.ts  get-episode.ts  get-r2-public-url.ts  list-episodes.ts  publish-episode.ts  update-episode.ts
tests/: test_tools.py  utils.test.ts
tests/clients/: podhome.test.ts  r2.test.ts
tests/integration/: workflow.test.ts
tests/tools/: tool-handlers.test.ts
